<resources>
    <string name="app_name">FamilyPoints</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="word_points">pontos</string>
    <string name="action_add">Adicionar</string>
    <string name="action_open">Abrir</string>
    <string name="action_close">Fechar</string>
    <string name="players_menu_item">Jogadores</string>
    <string name="rewards_menu_item">Lista de prêmios</string>
    <string name="settings_menu_item">Configurações</string>
    <string name="help_menu_item">Ajuda</string>
    <string name="exit_menu_item">Sair</string>
    <string name="add_button">Adicionar</string>
    <string name="name_of_player_label">Nome do jogador</string>
    <string name="name_of_reward_label">Nome do prêmio</string>
    <string name="value_points_label">Valor em pontos</string>
    <string name="done_plural">concluidas</string>
    <string name="to_do">a fazer</string>
    <string name="total">total</string>
    <string name="text_points">%1$s possui um total de %2$d pontos.</string>
    <string name="rescue_reward">Resgatar prêmio</string>
    <string name="go_to_daily_progress">Ver progresso diário</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_player">NewPlayerActivity</string>
    <string name="title_activity_new_reward">NewRewardActivity</string>
    <string name="title_activity_daily_progress">DailyProgressActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
