<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_player"
    tools:context="com.prototype.familypoints.activities.NewPlayerActivity"
    android:orientation="vertical">

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/addRewardFormLL" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <ImageView
                android:id="@+id/rewardPictureIV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"/>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/rewardNameACTV" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/name_of_reward_label"
                    android:layout_marginTop="16dp" android:gravity="center_horizontal"
                    android:inputType="textPersonName" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/rewardPointsACTV" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/value_points_label"
                    android:layout_marginTop="16dp" android:gravity="center_horizontal"
                    android:inputType="textPersonName" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/createRewardB" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/add_button"
                android:textStyle="bold" android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
