<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white_rounded_corner_shape"
    tools:context="com.prototype.familypoints.activities.DailyProgressActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView android:id="@+id/playerNameTV" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="Player" android:textSize="30sp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:max="100"
            android:progress="50"
            style="@android:style/Widget.ProgressBar.Horizontal"/>

        <LinearLayout
            android:id="@+id/numberTasksLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/numberTasksDoneLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numberTasksDoneTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:textColor="@color/green"
                    android:digits="true"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tasksDoneTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_plural"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/background_floating_material_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:id="@+id/numberTasksToDoLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numberTasksToDoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:textColor="@color/red"
                    android:digits="true"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tasksToDoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_do"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/background_floating_material_light"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:id="@+id/numberTasksTotalLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numberTasksTotalTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:textColor="@color/blue"
                    android:digits="true"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tasksTotalTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_floating_material_light"/>

    <ListView
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/tasksLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
